<resources>
	<string name="app_name">ORS Agent</string>
	<string name="content_description">Content description</string>
	<string name="captain_app">Captain App</string>
	<string name="sign_in">Sign in</string>
	<string name="phone">Mobile</string>
	<string name="wallet">Wallet</string>
	<string name="address">Address</string>
	<string name="landmark">Landmark</string>
	<string name="date_time">Date &amp; Time</string>
	<string name="assign_to_me">Assign To Me</string>
	<string name="tap_to_exit">Tap back again to exit</string>
	<string name="add_items">Add Items</string>
	<string name="items">Items</string>
	<string name="pay_cash">Pay Cash</string>
	<string name="pay_by_wallet">Pay By Wallet</string>
	<string name="welcome_to">Welcome to</string>
	<string name="verify">Verify</string>
	<string name="enter_mobile_here">Enter Mobile Number Here</string>
	<string name="indian_code">+91</string>
	<string name="resend_otp">We just sent you an OTP. Please enter it above. Haven\'t received yet? Resend OTP</string>
	<string name="submit">Submit</string>
	<string name="invalid_mobile">Invalid Mobile Number</string>
	<string name="sign_up">Sign Up</string>
	<string name="your_name">Your Name</string>
	<string name="your_business">Your Business</string>
	<string name="email_id">Email Id</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="invalid_otp">Invalid OTP</string>
	<string name="progress_authenticating">Authenticating…</string>
	<string name="time">Time</string>
	<string name="date">Date</string>
	<string name="progress_schedule_details">Loading schedule details…</string>
	<string name="progress_assigning">Assigning...</string>
	<string name="schedule_status">Schedule Status</string>
	<string name="title_assign_to_me">Assign to me?</string>
	<string name="assign_to_me_confirm">Are you sure you wish to assign this pickup schedule to yourself?</string>
	<string name="cancel">Cancel</string>
	<string name="start_process">On My Way</string>
	<string name="title_start_pick">Start pickup?</string>
	<string name="start_pickup_confirm">Are you sure you wish to start the pickup?</string>
	<string name="start">Start</string>
	<string name="starting_pickup">Starting pickup...</string>
	<string name="start_pickup">Start pickup</string>
	<string name="total">Total</string>
	<string name="chart">Chart</string>
	<string name="format_price">\u20B9 %.2f</string>
	<string name="done">Done</string>
	<string name="delete">Delete</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="invalid_qty">Invalid quantity</string>
	<string name="format_unit">%1$d %2$s</string>
	<string name="title_pay_by_cash">Pay by cash?</string>
	<string name="msg_pay_by_cash">Are you sure you wish to pay \u20B9 %.2f to the customer by cash?</string>
	<string name="title_pay_by_wallet">Pay by wallet?</string>
	<string name="msg_pay_by_wallet">Are you sure you wish to pay \u20B9 %.2f to the customer by Wallet?</string>
	<string name="progress_transacting">Transacting…</string>
	<string name="title_select_items">Select Items for Pickup</string>
	<string name="getting_schedule_items">Getting item list…</string>
	<string name="please_add_items_and_quantities">Please add items and quantities</string>
	<string name="your_wallet_balance">Your Wallet Balance</string>
	<string name="pay_now">Pay Now</string>
	<string name="payable_amount">Payable Amount</string>
	<string name="note">Note</string>
	<string name="hint_customer_wallet">Customer Wallet will be Updated with Above Payable Points</string>
	<string name="recharge_now">Recharge Now</string>
	<string name="progress_fetching_wallet">Fetching balance...</string>
	<string name="insufficient_balance">Insufficient Balance</string>
	<string name="msg_insufficient_balance">Please Recharge Your Wallet To Make Payment Via Wallet</string>
	<string name="hint_agent_wallet">Recharge once for all the captains under an agent</string>
	<string name="add_amount">Add amount for recharge</string>
	<string name="rs_300">\u20B9 300</string>
	<string name="rs_400">\u20B9 400</string>
	<string name="rs_500">\u20B9 500</string>
	<string name="rs_600">\u20B9 600</string>
	<string name="invalid_amount">Invalid amount</string>
	<string name="title_activity_maps">Map</string>
	<string name="location">Location</string>
	<string name="grant_permission">Please grant permission for navigation</string>
	<string name="gps_network_not_enabled">Please enable GPS</string>
	<string name="open_location_settings">open settings</string>
	<string name="no_current_location">Couldn\'t find the current location. please turn on the GPS and Internet</string>
	<string name="sign_up_less_than">Sign Up in less than 30 secs</string>
	<string name="hint_sign_up">Lets signup and partner with us today &amp; get started with business in no time</string>
	<string name="talk_to_our_support_team">Talk To Our Support Team</string>
	<string name="hint_talk_to_support">Stay connected with our support team to know area of opportunity</string>
	<string name="get_pick_up_request">Get Pickup Request</string>
	<string name="hint_pickup_request">Go live and start getting pickup request from customer neaerby</string>
	<string name="invalid_name">Invalid Name</string>
	<string name="invalid_email">Invalid Email</string>
	<string name="invalid_business">Invalid Business</string>
	<string name="invalid_address">Invalid Address</string>
	<string name="save_address">Save Address</string>
	<string name="no_address_found">No address found</string>
	<string name="invalid_lat_long_used">invalid latlong used</string>
	<string name="service_not_available">Service not available</string>
	<string name="no_location_data_provided">No location data provided</string>
	<string name="please_choose_location">Please choose location from map</string>
	<string name="progress_registering">Registering…</string>
	<string name="no_pickups">No Pickups yet.</string>
	<string name="rate_card">Rate card</string>
	<string name="add_item">Add Item</string>
	<string name="item_name">Item Name</string>
	<string name="item_price">Item Price</string>
	<string name="quantity">Quantity</string>
	<string name="price_unit">Price Unit</string>
	<string name="invalid_price">Invaid Price</string>
	<string name="invalid_unit">Invalid unit</string>
	<string name="creating_order">Creating order…</string>
	<string name="making_payment">Making payment…</string>
	<string name="Cancelling_payment">Cancelling payment…</string>
	<string name="obsolete_app_version">This version of the app is obsolete please update the app</string>
	<string name="title_update_app">Update Application</string>
	<string name="message_update_app">This version (%s) is no longer supported. Please update the app to enjoy our
		services</string>
	<string name="update">Update</string>
	<string name="message_optional_update">We\'ve released a new version of the app. Please update the app to enjoy our new features.</string>
	<string name="exit_app">Exit App</string>
	<string name="no_internet">No Internet access</string>
	<string name="save">Save</string>
</resources>
