<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	tools:ignore="MissingPrefix">

	<TextView
		fontPath="fonts/lato-bold.ttf"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/standard"
		android:text="@string/insufficient_balance"
		android:textAllCaps="true"
		android:textColor="@color/colorPrimary"
		android:textSize="@dimen/text_large"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:background="@color/grey_e0e0e0"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/standard"
		android:text="@string/msg_insufficient_balance"
		android:textColor="@color/black"
		android:textSize="@dimen/text_medium"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:layout_marginTop="@dimen/narrow"
		android:background="@color/grey_e0e0e0"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tv_recharge_now"
			fontPath="fonts/lato-bold.ttf"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/standard"
			android:text="@string/recharge_now"
			android:textColor="@color/navi_blue"
			android:textSize="@dimen/text_medium"/>

		<TextView
			android:id="@+id/tv_cancel"
			fontPath="fonts/lato-bold.ttf"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="@dimen/standard"
			android:text="@string/cancel"
			android:textColor="@color/navi_blue"
			android:textSize="@dimen/text_medium"/>
	</LinearLayout>
</LinearLayout>