<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.bigappcompany.ors_captain.activity.WalletPaymentActivity"
	tools:ignore="MissingPrefix">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			app:titleTextAppearance="@style/ToolbarTitle"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/standard"
			android:gravity="center"
			android:text="@string/your_wallet_balance"
			android:textColor="@color/white"
			android:textSize="@dimen/text_big"/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/btn_balance"
			fontPath="fonts/lato-bold.ttf"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="@dimen/large"
			android:layout_marginTop="@dimen/medium"
			android:background="@color/white"
			android:clickable="false"
			android:gravity="center"
			android:paddingEnd="@dimen/large"
			android:paddingStart="@dimen/large"
			android:textColor="@color/colorPrimary"
			android:textSize="@dimen/text_big"
			tools:text="\u20B9 5000"/>
	</android.support.design.widget.AppBarLayout>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/appbar"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:layout_marginTop="-16dp"
		app:cardElevation="@dimen/small">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					fontPath="fonts/lato-bold.ttf"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingBottom="@dimen/medium"
					android:paddingStart="@dimen/standard"
					android:paddingTop="@dimen/medium"
					android:text="@string/payable_amount"
					android:textColor="@color/grey_545454"
					android:textSize="@dimen/text_title"/>

				<TextView
					android:id="@+id/tv_payable_amount"
					fontPath="fonts/lato-bold.ttf"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:paddingBottom="@dimen/medium"
					android:paddingEnd="@dimen/standard"
					android:paddingTop="@dimen/medium"
					android:textColor="@color/grey_545454"
					android:textSize="@dimen/text_title"
					tools:text="\u20B9 1600"/>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/grey_e0e0e0"/>

			<TextView
				fontPath="fonts/lato-bold.ttf"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="@dimen/medium"
				android:text="@string/note"
				android:textColor="@color/black"
				android:textSize="@dimen/text_medium"/>

			<View
				android:layout_width="64dp"
				android:layout_height="0.5dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="@dimen/narrow"
				android:background="@color/grey_cccccc"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/narrow"
				android:gravity="center"
				android:paddingEnd="@dimen/standard"
				android:paddingStart="@dimen/standard"
				android:text="@string/hint_customer_wallet"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginTop="@dimen/large"
				android:background="@color/grey_e0e0e0"/>

			<TextView
				android:id="@+id/tv_recharge_now"
				fontPath="fonts/lato-bold.ttf"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/standard"
				android:text="@string/recharge_now"
				android:textColor="@color/colorPrimary"
				android:textSize="@dimen/text_medium"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/btn_pay"
		fontPath="fonts/lato-bold.ttf"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/colorPrimary"
		android:padding="@dimen/standard"
		android:text="@string/pay_now"
		android:textAllCaps="false"
		android:textColor="@color/white"
		android:textSize="@dimen/text_medium"/>
</RelativeLayout>
