<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/white"
	android:orientation="vertical">

	<TextView
		android:id="@+id/tv_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:drawableEnd="@drawable/ic_close_white_24dp"
		android:gravity="center"
		android:padding="@dimen/standard"
		android:text="@string/add_item"
		android:textColor="@color/white"
		android:textSize="@dimen/text_large"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingEnd="@dimen/standard"
		android:paddingStart="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/item_name"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/et_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:inputType="textCapWords"
		android:lines="1"
		android:paddingBottom="@dimen/narrow"
		android:paddingTop="@dimen/narrow"
		android:textSize="@dimen/text_regular"
		tools:text="Metal"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingEnd="@dimen/standard"
		android:paddingStart="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/item_price"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/et_price"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:inputType="numberDecimal"
		android:lines="1"
		android:paddingBottom="@dimen/narrow"
		android:paddingTop="@dimen/narrow"
		android:textSize="@dimen/text_regular"
		tools:text="Metal"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingEnd="@dimen/standard"
		android:paddingStart="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/price_unit"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/et_unit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:inputType="text"
		android:lines="1"
		android:paddingBottom="@dimen/narrow"
		android:paddingTop="@dimen/narrow"
		android:textSize="@dimen/text_regular"
		tools:text="Metal"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingEnd="@dimen/standard"
		android:paddingStart="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/quantity"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/et_quantity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:inputType="numberDecimal"
		android:lines="1"
		android:paddingBottom="@dimen/narrow"
		android:paddingTop="@dimen/narrow"
		android:textSize="@dimen/text_regular"
		tools:text="Metal"/>

	<!--<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:layout_marginTop="@dimen/standard"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tv_speed_0"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/draw_border_green"
			android:gravity="center"
			android:paddingBottom="@dimen/thin"
			android:paddingTop="@dimen/thin"
			android:tag="1"
			android:textColor="@color/colorPrimary"/>

		<TextView
			android:id="@+id/tv_speed_1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/standard"
			android:layout_weight="1"
			android:background="@drawable/draw_border_green"
			android:gravity="center"
			android:paddingBottom="@dimen/thin"
			android:paddingTop="@dimen/thin"
			android:tag="2"
			android:textColor="@color/colorPrimary"/>

		<TextView
			android:id="@+id/tv_speed_2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/standard"
			android:layout_weight="1"
			android:background="@drawable/draw_border_green"
			android:gravity="center"
			android:paddingBottom="@dimen/thin"
			android:paddingTop="@dimen/thin"
			android:tag="3"
			android:textColor="@color/colorPrimary"/>

		<TextView
			android:id="@+id/tv_speed_3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/standard"
			android:layout_weight="1"
			android:background="@drawable/draw_border_green"
			android:gravity="center"
			android:paddingBottom="@dimen/thin"
			android:paddingTop="@dimen/thin"
			android:tag="4"
			android:textColor="@color/colorPrimary"/>

		<TextView
			android:id="@+id/tv_speed_4"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/standard"
			android:layout_weight="1"
			android:background="@drawable/draw_border_green"
			android:gravity="center"
			android:paddingBottom="@dimen/thin"
			android:paddingTop="@dimen/thin"
			android:tag="5"
			android:textColor="@color/colorPrimary"/>
	</LinearLayout>-->

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/btn_add"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/medium"
		android:background="@color/colorPrimary"
		android:gravity="center"
		android:padding="@dimen/standard"
		android:text="@string/add"
		android:textColor="@color/white"
		android:textSize="@dimen/text_large"/>

</LinearLayout>